# WolfEngine

./: .gitignore
docs/: git-commands.txt
wolf/: .clang-tidy  CMakeLists.txt  export.h  test.cpp  test.js  test.wasm  tests.cpp  wolf.cpp  wolf.cppm  wolf.hpp
wolf/cmake/: fetch_boost_asio.cmake  fetch_boost_basics.cmake  fetch_boost_fiber.cmake  fetch_fiber_deps.cmake
wolf/shells/webRTC/: webRTC.bat  webRTC.sh
wolf/stream/webrtc/: w_audio_sink.hpp  w_capturer_factory.cpp  w_capturer_factory.hpp  w_create_session_des_obs.cpp  w_create_session_des_obs.hpp  w_create_session_desc_obs.cpp  w_create_session_desc_obs.hpp  w_data_channel_obs.hpp  w_desktop_capturer.hpp  w_ice_server.hpp  w_peer_conn_manager.cpp  w_peer_conn_manager.hpp  w_peer_conn_obs.cpp  w_peer_conn_obs.hpp  w_peer_conn_stats_collector_callback.hpp  w_set_session_des_obs.cpp  w_set_session_des_obs.hpp  w_set_session_desc_obs.cpp  w_set_session_desc_obs.hpp  w_track_source.hpp  w_vcm_capturer.cpp  w_vcm_capturer.hpp  w_video_decoder_factory_null_codec.hpp  w_video_encoder_factory_null_codec.hpp  w_video_sink.cpp  w_video_sink.hpp  w_video_source.hpp
wolf/stream/webrtc/capturer/: w_capturer_factory.cpp  w_capturer_factory.hpp  w_desktop_capturer.hpp  w_track_source.hpp  w_vcm_capturer.cpp  w_vcm_capturer.hpp
wolf/stream/webrtc/data/: w_data_channel_obs.hpp
wolf/stream/webrtc/interceptor/: w_create_session_desc_obs.cpp  w_create_session_desc_obs.hpp  w_set_session_desc_obs.hpp
wolf/stream/webrtc/media/: w_audio_sink.hpp  w_video_sink.hpp
wolf/stream/webrtc/peer/: w_peer_conn_manager.cpp  w_peer_conn_manager.hpp  w_peer_conn_manager_helpers.cpp  w_peer_conn_manager_helpers.hpp  w_peer_conn_obs.cpp  w_peer_conn_obs.hpp  w_peer_conn_stats_collector_callback.cpp  w_peer_conn_stats_collector_callback.hpp
wolf/system/: execution.cppm  gametime.cppm  system.cppm  w_gametime.cpp  w_gametime.hpp
wolf/system/asio/: round_robin.hpp  yield_detail.hpp
wolf/w_chrono/: w_timer.cpp  w_timer.h
wolf/w_memory/: w_string.cpp  w_string.hpp
wolf/w_network/asio/: round_robin.hpp  yield.hpp
wolf/w_network/asio/detail/: yield.hpp
